# rust-cli-cursor

./: .cliff.toml  .editorconfig  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/commands/: hello.rs  ip.rs  mod.rs
src/models/: mod.rs
src/services/: mod.rs
